--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background: rgba(0, 255, 0, 0.1);
+            background: rgb(23, 23, 23);
             border: 2px solid #00ff00;
             padding: 20px;
             color: #00ff00;
